@@ -1,0 +1,16 @@
+ASSEMBLY = Lastfm.Gui
+TARGET = library
+LINK = $(REF_LASTFM_GUI)
+
+SOURCES = \
+	Lastfm.Gui/AccountLoginDialog.cs \
+	Lastfm.Gui/AccountLoginForm.cs \
+	Lastfm.Gui/Badge.cs \
+	Lastfm.Gui/LinkButton.cs
+
+RESOURCES =  \
+	Resources/badge-hover.png \
+	Resources/badge.png
+
+include $(top_srcdir)/build/build.mk
+
